# mujoco_rgb_pointcloud_rerun

./: README.md  mujoco_rerun.py  pyproject.toml  rerun_demo.py
config/: camera_environment.xml
